# OGFN-Launcher-for-free

./: README.md
launcher/: README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
launcher/src/: App.css  App.tsx  main.tsx
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: launch.rs  lib.rs  main.rs  utilities.rs
launcher/src/components/core/: background.tsx  frame.tsx  sidebar.tsx
launcher/src/components/home/: donate.tsx  greet.tsx  news.tsx  smallShop.tsx  vbucks.tsx
launcher/src/components/settings/: Option.tsx  OptionGroup.tsx
launcher/src/components/settings/modals/: logout.tsx  toggle.tsx
launcher/src/components/views/: credentials.tsx  home.tsx  library.tsx  settings.tsx  shop.tsx
launcher/src/exports/: exports.ts
launcher/src/helpers/: close.ts  deepLinkListener.ts  import.ts  launch.ts
launcher/src/stores/: build.ts  settings.ts  user.ts
